--- a/app/mobile/src/main/AndroidManifest.xml
+++ b/app/mobile/src/main/AndroidManifest.xml
@@ -30,7 +30,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <service
+            android:name=".stepCounter.StepCounter"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
     </application>
 
 </manifest>
